# Cardiac-ACR-Opus46

./: .gitignore  CODE_ANALYSIS.md  Cardiac_ACR_Backend_V13_FINAL.ipynb  Cardiac_ACR_Backend_V13_FINAL.py  DEVELOPMENT_LOG.md  Plan.md  README.md  WSI_MAINLINE_CODE_TRACE.md  WSI_MAINLINE_USED_MODULES_AND_FUNCTIONS.md  annotate_png.py  annotate_svs.py  cardiac_dirs.py  cardiac_globals.py  cardiac_utils.py  count_1r2.py  count_1r2_new.py  count_1r2_testing.py  filter.py  filter_patches.py  filter_tiles.py  import_openslide.py  pyproject.toml  segmentation_tools.py  slide.py  slide_backup.py  tiles.py  tileset_utils.py  util.py
Code/: annotate_png.py  annotate_svs.py  cardiac_acr_diagnose_wsi.py  cardiac_globals.py  cardiac_utils.py  count_1r2.py  filter.py  filter_patches.py  import_openslide.py  slide.py  tiles.py  tileset_utils.py
Code/stats/: _stats_utils.py  dump_training_predictions.py  patch_level_stats.py  test_set_stats.py  training_set_stats.py
Code/training/: __init__.py  cross_validation.py  data_utils.py  extract_patches.py  train.py
cardiac_acr/: __init__.py  __main__.py  annotate_png.py  annotate_svs.py  cardiac_acr_diagnose_wsi.py  cardiac_globals.py  cardiac_utils.py  check_dependencies.py  config.py  count_1r2.py  filter.py  filter_patches.py  openslide_compat.py  slide.py  tiles.py  tileset_utils.py  util.py
docs/: AUGMENTATION_STORAGE.md  DEVELOPMENT_LOG.md  PERFORMANCE_IDEAS.md  PROJECT_NOTES.md  TRAINING_TIMINGS.md  UNI_MULTIVIEW_PLAN.md  WEAKNESSES.md  WSI_MAINLINE_CODE_TRACE.md  WSI_MAINLINE_USED_MODULES_AND_FUNCTIONS.md
(+54 files in other folders)
